--- a/package.json
+++ b/package.json
@@ -1,10 +1,16 @@
 {
-  "name": "wrkbk-basic-html-editor",
+  "name": "draft-js-basic-html-editor",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "keywords": [
+    "draftjs",
+    "editor",
+    "react",
+    "html"
+  ],
+  "main": "src/BasicHtmlEditor.js",
   "scripts": {
-    "test": "npm run test"
+    "dist-example": "webpack --config webpack.example-dist.config.js"
   },
   "author": "",
   "license": "MIT",
