--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "draft-js-basic-html-editor",
-  "version": "1.0.0",
+  "version": "0.1.0-pre",
   "description": "",
   "keywords": [
     "draftjs",
@@ -8,9 +8,14 @@
     "react",
     "html"
   ],
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/dburrows/draft-js-basic-html-editor.git"
+  },
   "main": "src/BasicHtmlEditor.js",
   "scripts": {
-    "dist-example": "webpack --config webpack.example-dist.config.js"
+    "dist-example": "webpack --config webpack.example-dist.config.js",
+    "test-watch": "mocha --recursive --compilers js:babel-register -r babel-polyfill -w tests/"
   },
   "author": "",
   "license": "MIT",
@@ -23,8 +28,10 @@
     "babel-core": "^6.5.2",
     "babel-eslint": "^5.0.0",
     "babel-loader": "^6.2.3",
+    "babel-polyfill": "^6.5.0",
     "babel-preset-es2015": "^6.5.0",
     "babel-preset-react": "^6.5.0",
+    "babel-register": "^6.5.2",
     "chai": "^3.5.0",
     "css-loader": "^0.23.1",
     "enzyme": "^2.0.0",
