--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "draft-js-basic-html-editor",
-  "version": "0.1.0-pre",
+  "version": "1.0.0",
   "description": "",
   "keywords": [
     "draftjs",
