add browerify transform config

--- a/package.json
+++ b/package.json
@@ -45,5 +45,8 @@
     "style-loader": "^0.13.0",
     "webpack": "^1.12.14",
     "webpack-dev-server": "^1.14.1"
+  },
+  "browserify": {
+    "transform": [["babelify", { "presets": ["es2015","react"] }]]
   }
 }
