--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "draft-js-basic-html-editor",
-  "version": "1.0.3",
+  "version": "1.0.2",
   "description": "",
   "keywords": [
     "draftjs",
@@ -17,7 +17,7 @@
     "dist-example": "webpack --config webpack.example-dist.config.js",
     "test-watch": "mocha --recursive --compilers js:babel-register -r babel-polyfill -w tests/"
   },
-  "author": "",
+  "author": "David Burrows <david@designsuperbuild.com>",
   "license": "MIT",
   "dependencies": {
     "draft-js": "^0.2.0",
@@ -42,6 +42,7 @@
     "mocha-loader": "^0.7.1",
     "node-sass": "^3.4.2",
     "react-hot-loader": "^1.3.0",
+    "release-it": "^2.3.1",
     "sass-loader": "^3.1.2",
     "style-loader": "^0.13.0",
     "webpack": "^1.12.14",
