--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "draft-js-basic-html-editor",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "description": "",
   "keywords": [
     "draftjs",
@@ -15,7 +15,8 @@
   "main": "src/BasicHtmlEditor.js",
   "scripts": {
     "dist-example": "webpack --config webpack.example-dist.config.js",
-    "test-watch": "mocha --recursive --compilers js:babel-register -r babel-polyfill -w tests/"
+    "test-watch": "mocha --recursive --compilers js:babel-register -r babel-polyfill -w tests/",
+    "release": "release-it"
   },
   "author": "David Burrows <david@designsuperbuild.com>",
   "license": "MIT",
