--- a/package.json
+++ b/package.json
@@ -37,8 +37,10 @@
     "chai": "^3.5.0",
     "css-loader": "^0.23.1",
     "enzyme": "^2.0.0",
-    "eslint": "^2.2.0",
+    "eslint": "^2.4.0",
     "eslint-plugin-react": "^4.1.0",
+    "estraverse": "^4.2.0",
+    "estraverse-fb": "^1.3.1",
     "mocha": "^2.4.5",
     "mocha-loader": "^0.7.1",
     "node-sass": "^3.4.2",
