--- a/package.json
+++ b/package.json
@@ -16,14 +16,15 @@
   "scripts": {
     "dist-example": "webpack --config webpack.example-dist.config.js --optimize-minimize",
     "dist": "webpack --display-modules --config webpack.dist.config.js -p",
+    "start": "webpack-dev-server --mode development --config webpack.config.js",
     "test-watch": "mocha --recursive --compilers js:babel-register -r babel-polyfill -w tests/",
     "release": "npm run dist && release-it"
   },
   "author": "David Burrows <david@designsuperbuild.com>",
   "license": "MIT",
   "dependencies": {
-    "draft-js": "^0.9.1",
-    "lodash": "^4.6.1"
+    "draft-js": "^0.10.5",
+    "lodash": "^4.17.5"
   },
   "peerDependencies": {
     "react": "^15",
