--- a/package.json
+++ b/package.json
@@ -14,9 +14,9 @@
   },
   "main": "dist/index.js",
   "scripts": {
-    "dist-example": "webpack --config webpack.example-dist.config.js --optimize-minimize",
-    "dist": "webpack --display-modules --config webpack.dist.config.js -p",
     "start": "webpack-dev-server --mode development --config webpack.config.js",
+    "dist-example": "webpack --mode production --config webpack.example-dist.config.js",
+    "dist": "webpack --mode production --display-modules --config webpack.dist.config.js",
     "test-watch": "mocha --recursive --compilers js:babel-register -r babel-polyfill -w tests/",
     "release": "npm run dist && release-it"
   },
@@ -31,12 +31,14 @@
     "react-dom": "^15"
   },
   "devDependencies": {
-    "babel-core": "^6.8.0",
+    "babel-core": "^6.26.0",
     "babel-eslint": "^6.0.4",
-    "babel-loader": "^6.2.4",
+    "babel-loader": "^7.1.3",
+    "babel-plugin-lodash": "^3.3.2",
     "babel-polyfill": "^6.8.0",
-    "babel-preset-es2015": "^6.6.0",
+    "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.5.0",
+    "babel-preset-stage-0": "6.24.1",
     "babel-register": "^6.8.0",
     "chai": "^3.5.0",
     "css-loader": "^0.23.1",
@@ -45,17 +47,20 @@
     "eslint-plugin-react": "^5.0.1",
     "estraverse": "^4.2.0",
     "estraverse-fb": "^1.3.1",
+    "lodash-webpack-plugin": "^0.11.4",
     "mocha": "^2.4.5",
     "mocha-loader": "^0.7.1",
-    "node-sass": "^3.4.2",
+    "node-sass": "4",
     "react": "^15",
     "react-dom": "^15",
-    "react-hot-loader": "^1.3.0",
+    "react-hot-loader": "^4.0.0",
     "release-it": "^2.3.1",
-    "sass-loader": "^3.1.2",
+    "sass-loader": "^6.0.6",
     "style-loader": "^0.13.0",
-    "webpack": "^1.12.14",
-    "webpack-dev-server": "^1.14.1"
+    "webpack": "^4.0.1",
+    "webpack-bundle-analyzer": "^2.11.1",
+    "webpack-cli": "^2.0.9",
+    "webpack-dev-server": "^3.0.0-alpha6"
   },
   "browserify": {
     "transform": [
@@ -63,8 +68,9 @@
         "babelify",
         {
           "presets": [
-            "es2015",
-            "react"
+            "react",
+            "env",
+            "stage-0"
           ]
         }
       ]
